cicd/k3s-flannel-loxilb-ingress/ingress/loxilb-ingress-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: loxilb-ingress
    app.kubernetes.io/name: loxilb-ingress
  name: loxilb-ingress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loxilb-ingress
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: loxilb-ingress
      app.kubernetes.io/instance: loxilb-ingress
      app.kubernetes.io/name: loxilb-ingress
  template:
    metadata:
      name: loxilb-ingress
      labels:
        app: loxilb-ingress
        app.kubernetes.io/instance: loxilb-ingress
        app.kubernetes.io/name: loxilb-ingress
    spec:
      serviceAccountName: loxilb-ingress
      containers:
      - name: loxilb-ingress
        volumeMounts:
          - mountPath: "/opt/loxilb/cert/"
            name: loxilb-ssl-directory
          - name: loxilb-default-ssl
            mountPath: /opt/loxilb/cert/server.crt
            subPath: server.crt
            readOnly: true
          - name: loxilb-default-ssl
            mountPath: /opt/loxilb/cert/server.key
            subPath: server.key
            readOnly: true
        image: "ghcr.io/loxilb-io/loxilb-ingress:debug"
        imagePullPolicy: Always
        command: [ "/bin/loxilb-ingress" ]
        ports:
        - containerPort: 11111
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        livenessProbe:
          httpGet:
            path: netlox/v1/config/loadbalancer/all
            port: 11111
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
      volumes:
        - name: loxilb-default-ssl
          secret:
            secretName: loxilb-ssl
        - name: loxilb-ssl-directory
          emptyDir: {}
